[BUGFIX]: DP error in team, SponsorShip single to double column on mobile-view

--- a/client/src/screens/Daydetails/Daydetails.css
+++ b/client/src/screens/Daydetails/Daydetails.css
@@ -91,6 +91,7 @@
     justify-content: center;
     flex-direction: column;
     text-align: center;
+    font-size: 20px;
   }
 
   .day-details-wrapper {
@@ -126,5 +127,3 @@
     padding-right: 0.5rem;
   }
 }
-
-
